# warpo

./: .clang-tidy  .git-blame-ignore-revs  .prettierignore  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTION.md  README.md  as-test.config.js  asconfig.json  cspell.json  package-lock.json  package.json  tsconfig-warpo.json
.github/workflows/: check.yml  gh-pages.yml  pr-title.yml  publish.yml  quality.yml
assemblyscript/src/: builtins.ts  compiler.ts  index-wasm.ts  json.ts  module.ts  program.ts  resolver.ts  warpo.ts
assemblyscript_extension/src/: builtins.ts  index.ts  utf8_cache.ts
common/: AsModule.cpp  CMakeLists.txt  ClassInfo.cpp  DebugLevel.cpp  Features.cpp  FieldInfo.cpp  OptLevel.cpp  SubProgramInfo.cpp  SubProgramRegistry.cpp  TypeNameHelper.cpp  VariableInfo.cpp
cspell/: project-words.txt
docs/: index.md
docs/.vitepress/: config.ts
frontend/: AsString.cpp  AsString.hpp  CMakeLists.txt  Compiler.cpp  CompilerImpl.cpp  CompilerImpl.hpp  LinkedAPI.cpp  LinkedAPI.hpp  LinkedAPIAssemblyscript.cpp  LinkedAPIBinaryen.cpp  LinkedAPICppWrapper.cpp  LinkedAPIOpt.cpp  LinkedAPIVariableInfo.cpp  ModuleResolver.cpp  ModuleResolver.hpp
passes/: AdvancedInlining.cpp  CMakeLists.txt  ConditionalReturn.cpp  DoInlining.cpp  DoInlining.hpp  ExtractMostFrequentlyUsedGlobals.cpp  ImmutableLoadEliminating.cpp  ImmutableLoadEliminating.hpp  InsertTracePoint.cpp  InsertTracePoint.hpp  Runner.cpp  Runner.hpp  RunnerForTest.cpp
support/: CMakeLists.txt  Debug.cpp  DynBitSet.cpp  FileSystem.cpp  Opt.cpp  Statistics.cpp  StringPool.cpp
tools/: CMakeLists.txt
(+311 files in other folders)
