cmake_minimum_required(VERSION 3.20)
project(warpo)

option(WARPO_RELEASE "build for release" OFF)
option(WARPO_SANITIZE "enable address sanitizer" OFF)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unknown-warning-option")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti")

add_definitions("-DINTERRUPTION_REQUEST=0")
add_definitions("-DEAGER_ALLOCATION=1")

if(WARPO_SANITIZE)
  add_compile_options(-fsanitize=address)
  add_link_options(-fsanitize=address)
endif()

if(NOT CMAKE_BUILD_TYPE)
  if(WARPO_RELEASE)
    set(CMAKE_BUILD_TYPE Release)
  else()
    set(CMAKE_BUILD_TYPE Debug)
  endif()
endif()

add_subdirectory(third_party EXCLUDE_FROM_ALL)

add_subdirectory(common)
add_subdirectory(frontend)
add_subdirectory(passes)
add_subdirectory(support)
add_subdirectory(tools)
add_subdirectory(tests)
